--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>IPv4 演習: ネットワーク/ブロードキャスト計算</title>
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#111827">
+  <link rel="icon" href="./favicon-32.png" sizes="32x32">
+  <link rel="icon" href="./favicon-16.png" sizes="16x16">
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
   <style>
     :root { color-scheme: light dark; }
     * { box-sizing: border-box; }
